--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -6,11 +6,9 @@
     android:padding="5dp"
     android:id="@+id/rel">
 
-
 <ScrollView
 android:layout_width="match_parent"
-android:layout_height="match_parent"
->
+android:layout_height="match_parent">
 
 <RelativeLayout
     android:layout_width="match_parent"
@@ -766,7 +764,7 @@ android:layout_height="match_parent"
         android:layout_marginRight="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
-/>
+    />
     </LinearLayout>
 </RelativeLayout>
 </ScrollView>
@@ -797,7 +795,5 @@ android:layout_height="match_parent"
             android:onClick="back_to_main"
             android:src="@drawable/baseline_done_white_48dp"
             android:backgroundTint="#00c853"/>
-
-
     </RelativeLayout>
 </RelativeLayout>
