--- a/app/src/main/res/layout/full_result_views_layout.xml
+++ b/app/src/main/res/layout/full_result_views_layout.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:padding="3dp">
+    android:padding="3dp"
+    android:layout_centerInParent="true">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="240dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_row="0"
-        android:layout_column="0"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
         android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
         android:textColor="#131212"
-        android:textSize="16sp"
+        android:textSize="20sp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:textStyle="normal"
         android:theme="@style/MyEditText"
         app:fontFamily="sans-serif-condensed-medium" />
@@ -24,19 +25,28 @@
 
     <TextView
         android:id="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:gravity="right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_row="0"
-        android:layout_column="1"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginRight="2dp"
+        android:layout_toRightOf="@+id/textView"
+        android:layout_marginLeft="2dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/textView"
         android:layout_marginBottom="5dp"
         android:textColor="@color/labTextHeading"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="normal"
         android:theme="@style/MyEditText"
         app:fontFamily="sans-serif" />
 
-</GridLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/textView"
+        android:background="@android:color/darker_gray"/>
+
+</RelativeLayout>
