--- a/app/src/main/res/layout/medication_list.xml
+++ b/app/src/main/res/layout/medication_list.xml
@@ -2,11 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="400dp"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:id="@+id/medicationListLayout"
     android:background="@color/medicationThird"
     android:elevation="20dp"
     android:padding="2dp"
+    android:layout_marginBottom="1dp"
     >
 
     <TextView
