new branch that focuses entirely on adding and refining features to BloodWork

--- a/app/src/main/res/layout-sw380dp/activity_blood_work_main.xml
+++ b/app/src/main/res/layout-sw380dp/activity_blood_work_main.xml
@@ -11,7 +11,7 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/listview_medication"
+            android:id="@+id/listview_main"
             android:layout_margin="5dp"
             android:elevation="10dp"
             android:dividerHeight="5.0sp"
