--- a/app/src/main/res/layout-sw380dp/activity_full_result.xml
+++ b/app/src/main/res/layout-sw380dp/activity_full_result.xml
@@ -70,6 +70,7 @@
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/scrollViewForPdf"
         android:layout_below="@+id/dateday"
         >
 <LinearLayout
@@ -84,13 +85,24 @@
             android:orientation="vertical"
             android:layout_margin="5dp"
             >
-
         </LinearLayout>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/doctorscomment">
-        </TextView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:layout_margin="5dp"
+        android:id="@+id/doctorsCommentText"
+        android:text="@string/DoctorsCommentText"
+        android:visibility="invisible">
+    </TextView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/doctorsComment"
+        android:layout_margin="5dp"
+        android:textSize="22sp">
+    </TextView>
 </LinearLayout>
     </ScrollView>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
