--- a/app/src/main/res/layout-sw380dp/activity_extra_features_blood_work.xml
+++ b/app/src/main/res/layout-sw380dp/activity_extra_features_blood_work.xml
@@ -40,6 +40,16 @@
         android:id="@+id/DoctorsCommentEditText"
         >
     </EditText>
+        <Button
+            android:id="@+id/okButtonComment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ok_button_basic_lab"
+            android:layout_below="@id/DoctorsCommentEditText"
+            android:layout_alignParentRight="true"
+            android:onClick="setDoctorsComment">
+
+        </Button>
     </RelativeLayout>
 
     <LinearLayout
