--- a/app/src/main/res/layout-sw380dp/activity_change_current_blood_work_date.xml
+++ b/app/src/main/res/layout-sw380dp/activity_change_current_blood_work_date.xml
@@ -5,10 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp">
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Date of the Current BloodWork"
-        android:textColor="@color/medicationText"
+        android:elevation="10dp"
+        android:layout_margin="5dp"
+        android:textColor="#ffffff"
+        android:padding="2dp"
+        android:background="@drawable/rounded_corner"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_alignParentStart="true"
@@ -26,6 +30,7 @@
         android:background="@drawable/rounded_corner_datepicker"
         android:elevation="10dp"
         android:padding="5dp"
+        android:layout_margin="10dp"
         android:calendarViewShown="false"/>
     <RelativeLayout
         android:id="@+id/buttons"
