--- a/app/src/main/res/layout-sw380dp/activity_extra_features_blood_work.xml
+++ b/app/src/main/res/layout-sw380dp/activity_extra_features_blood_work.xml
@@ -9,22 +9,27 @@
         android:layout_height="wrap_content">
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:elevation="10dp">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/DoctorsCommentRelativeLayout">
+        android:id="@+id/DoctorsCommentRelativeLayout"
+        android:elevation="10dp">
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:background="@drawable/rounded_corner"
         android:text="@string/DoctorsCommentText"
         android:id="@+id/DoctorsComment"
+        android:elevation="10dp"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_margin="2dp"
-        android:textColor="@color/medicationText"
+        android:layout_margin="5dp"
+        android:textColor="#ffffff"
+        android:padding="2dp"
         app:fontFamily="sans-serif-condensed"
         android:layout_alignParentTop="true">
     </TextView>
@@ -32,7 +37,9 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_below="@+id/DoctorsComment"
-        android:layout_margin="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
         android:maxLength="150"
         android:padding="5dp"
         android:background="@drawable/doctors_comment_edittext"
@@ -45,28 +52,37 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ok_button_basic_lab"
+            android:textSize="15sp"
             android:layout_below="@id/DoctorsCommentEditText"
             android:layout_alignParentRight="true"
-            android:onClick="setDoctorsComment">
+            android:textColor="#ffffff"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:onClick="setDoctorsComment"
+            android:background="#00c853">
 
         </Button>
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="3dp"
         android:layout_below="@+id/DoctorsCommentRelativeLayout"
         android:id="@+id/ReminderRefill">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Remind me on my next BloodWork"
-            android:layout_margin="2dp"
-            android:textColor="@color/medicationText"
+            android:text="Remind my next BloodWork"
+            android:elevation="10dp"
             android:textSize="24sp"
             android:textStyle="bold"
+            android:layout_margin="5dp"
+            android:textColor="#ffffff"
+            android:background="@drawable/rounded_corner"
+            android:padding="2dp"
             app:fontFamily="sans-serif-condensed"
             >
         </TextView>
@@ -76,7 +92,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:id="@+id/radioButtonRefill">
+            android:id="@+id/radioButtonRefill"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp">
             <RadioButton android:id="@+id/radio_pirates1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
