--- a/app/src/main/res/layout-sw380dp/activity_full_result.xml
+++ b/app/src/main/res/layout-sw380dp/activity_full_result.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp"
-
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +12,6 @@
         android:background="@drawable/rounded_corner"
         android:id="@+id/toolbarLabResult"
         android:elevation="20dp"
-
         android:layout_marginBottom="2.5dp">
 
         <TextView
@@ -69,48 +67,73 @@
     </LinearLayout>
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/scrollViewForPdf"
         android:layout_below="@+id/dateday"
+        android:fillViewport="true"
+        android:layout_marginBottom="75dp"
         >
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <LinearLayout
             android:id="@+id/parent_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical"
+            android:layout_alignParentTop="true"
             android:layout_margin="5dp"
             >
         </LinearLayout>
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
-        android:layout_margin="5dp"
+        android:orientation="vertical"
+        android:gravity="bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/parent_layout">
+
+    <TextView
         android:id="@+id/doctorsCommentText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="15dp"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="@string/DoctorsCommentText"
+        android:textColor="#000000"
+        android:textSize="22sp"
         android:visibility="invisible">
+
     </TextView>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/doctorsComment"
-        android:layout_margin="5dp"
-        android:textSize="22sp">
+        android:layout_margin="7dp"
+        android:textColor="@color/labTextHeading"
+        android:fontFamily="sans-serif"
+        android:textSize="20sp">
     </TextView>
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/alertForNextBloodWorkText"
-    android:layout_margin="5dp"
+    android:layout_marginLeft="5dp"
+    android:fontFamily="sans-serif-smallcaps"
+    android:layout_marginTop="10dp"
+    android:textColor="#000000"
     android:textSize="22sp"/>
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
     </ScrollView>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
     <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -155,5 +178,6 @@
         android:text="@string/TRACK"
         android:textColor="#ffffff"
         android:textSize="20sp" />
+    </RelativeLayout>
 
 </RelativeLayout>
