--- a/app/src/main/res/layout/activity_full_result.xml
+++ b/app/src/main/res/layout/activity_full_result.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp"
-
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +12,6 @@
         android:background="@drawable/rounded_corner"
         android:id="@+id/toolbarLabResult"
         android:elevation="20dp"
-
         android:layout_marginBottom="2.5dp">
 
         <TextView
@@ -41,7 +39,7 @@
         android:gravity="end"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-       >
+        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -69,73 +67,122 @@
     </LinearLayout>
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollViewForPdf"
         android:layout_below="@+id/dateday"
+        android:fillViewport="true"
+        android:layout_marginBottom="75dp"
         >
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-        <LinearLayout
-            android:id="@+id/parent_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:layout_margin="5dp"
-            >
-
-        </LinearLayout>
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/doctorscomment">
-        </TextView>
-</LinearLayout>
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:id="@+id/parent_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                android:layout_alignParentTop="true"
+                android:layout_margin="5dp"
+                >
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="bottom"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@id/parent_layout">
+
+                <TextView
+                    android:id="@+id/doctorsCommentText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="15dp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:text="@string/DoctorsCommentText"
+                    android:textSize="22sp"
+                    android:visibility="invisible">
+
+                </TextView>
+                <View
+                    android:layout_width="200dp"
+                    android:layout_height="1dp"
+                    android:background="@android:color/darker_gray"
+                    android:visibility="invisible"
+                    android:id="@+id/lineHorizontal"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/doctorsComment"
+                    android:layout_margin="7dp"
+                    android:textColor="@color/labTextHeading"
+                    android:fontFamily="sans-serif-condensed-medium"
+                    android:textSize="20sp">
+                </TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/alertForNextBloodWorkText"
+                    android:layout_marginLeft="5dp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:layout_marginTop="10dp"
+                    android:textColor="#000000"
+                    android:textSize="22sp"/>
+            </LinearLayout>
+        </RelativeLayout>
     </ScrollView>
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentRight="true"
-    android:id="@+id/okayButton"
-    android:layout_alignParentEnd="true"
-    android:onClick="backToMain"
-    android:src="@drawable/baseline_done_white_48dp"
-    android:backgroundTint="#00c853"/>
-
-
-
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:id="@+id/deleteButton"
-        android:layout_alignParentStart="true"
-        android:onClick="deleteResult"
-        android:backgroundTint="#ff0000"
-        android:src="@drawable/baseline_delete_outline_white_36dp"/>
+        android:layout_alignParentBottom="true">
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:id="@+id/okayButton"
+            android:layout_alignParentEnd="true"
+            android:onClick="backToMain"
+            android:src="@drawable/baseline_done_white_48dp"
+            android:backgroundTint="#00c853"/>
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="153dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
 
-        android:layout_marginStart="68dp"
-        android:layout_marginLeft="68dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginRight="68dp"
-        android:layout_toStartOf="@+id/okayButton"
-        android:layout_toLeftOf="@+id/okayButton"
-        android:layout_toEndOf="@+id/deleteButton"
-        android:layout_toRightOf="@+id/deleteButton"
-        android:background="@drawable/button_rounded_corner"
-        android:onClick="gotoTrackPage"
-        android:text="@string/TRACK"
-        android:textColor="#ffffff"
-        android:textSize="20sp" />
+
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/deleteButton"
+            android:layout_alignParentStart="true"
+            android:onClick="deleteResult"
+            android:backgroundTint="#ff0000"
+            android:src="@drawable/baseline_delete_outline_white_36dp"/>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="153dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+
+            android:layout_marginStart="68dp"
+            android:layout_marginLeft="68dp"
+            android:layout_marginEnd="68dp"
+            android:layout_marginRight="68dp"
+            android:layout_toStartOf="@+id/okayButton"
+            android:layout_toLeftOf="@+id/okayButton"
+            android:layout_toEndOf="@+id/deleteButton"
+            android:layout_toRightOf="@+id/deleteButton"
+            android:background="@drawable/button_rounded_corner"
+            android:onClick="gotoTrackPage"
+            android:text="@string/TRACK"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
+    </RelativeLayout>
 
 </RelativeLayout>
