--- a/app/src/main/res/layout-sw380dp/activity_full_result.xml
+++ b/app/src/main/res/layout-sw380dp/activity_full_result.xml
@@ -103,11 +103,16 @@
         android:layout_marginTop="15dp"
         android:fontFamily="sans-serif-smallcaps"
         android:text="@string/DoctorsCommentText"
-        android:textColor="#000000"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:visibility="invisible">
 
     </TextView>
+        <View
+            android:layout_width="200dp"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"
+            android:visibility="invisible"
+            android:id="@+id/lineHorizontal"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -115,8 +120,8 @@
         android:id="@+id/doctorsComment"
         android:layout_margin="7dp"
         android:textColor="@color/labTextHeading"
-        android:fontFamily="sans-serif"
-        android:textSize="20sp">
+        android:fontFamily="sans-serif-condensed-medium"
+        android:textSize="18sp">
     </TextView>
 <TextView
     android:layout_width="wrap_content"
@@ -126,7 +131,7 @@
     android:fontFamily="sans-serif-smallcaps"
     android:layout_marginTop="10dp"
     android:textColor="#000000"
-    android:textSize="22sp"/>
+    android:textSize="20sp"/>
     </LinearLayout>
 </RelativeLayout>
     </ScrollView>
