--- a/app/src/main/res/layout/activity_extra_features_blood_work.xml
+++ b/app/src/main/res/layout/activity_extra_features_blood_work.xml
@@ -4,99 +4,124 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/DoctorsCommentRelativeLayout">
-    <TextView
+    <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="@string/DoctorsCommentText"
-        android:id="@+id/DoctorsComment"
-        android:layout_alignParentTop="true">
-    </TextView>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/DoctorsComment"
-        android:hint="Your text goes here!"
-        android:id="@+id/DoctorsCommentEditText"
-        >
-
-    </EditText>
-    </RelativeLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date of the Current BllodWork"
-        android:textColor="@color/medicationText"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_below="@id/DoctorsCommentRelativeLayout"
-        app:fontFamily="sans-serif-condensed"
-        android:id="@+id/DatePickerText">
-    </TextView>
-    <DatePicker
-        android:id="@+id/BloodWorkDatePicker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:datePickerMode="spinner"
-        android:layout_below="@+id/DatePickerText"
-        android:layout_centerInParent="true"
-        android:background="@drawable/rounded_corner_datepicker"
-        android:elevation="10dp"
-        android:calendarViewShown="false"/>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="3dp"
-        android:layout_below="@+id/BloodWorkDatePicker"
-        android:id="@+id/ReminderRefill">
-        <TextView
+        android:layout_height="wrap_content">
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Remind me on my next BloodWork"
-            android:textColor="@color/medicationText"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:fontFamily="sans-serif-condensed"
-            >
-        </TextView>
+            android:elevation="10dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/DoctorsCommentRelativeLayout"
+                android:elevation="10dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:background="@drawable/rounded_corner"
+                    android:text="@string/DoctorsCommentText"
+                    android:id="@+id/DoctorsComment"
+                    android:elevation="10dp"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    android:layout_margin="5dp"
+                    android:textColor="#ffffff"
+                    android:padding="2dp"
+                    app:fontFamily="sans-serif-condensed"
+                    android:layout_alignParentTop="true">
+                </TextView>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_below="@+id/DoctorsComment"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp"
+                    android:maxLength="150"
+                    android:padding="5dp"
+                    android:background="@drawable/doctors_comment_edittext"
+                    android:hint="Any important notes from doctor...?"
+                    android:id="@+id/DoctorsCommentEditText"
+                    >
+                </EditText>
+                <Button
+                    android:id="@+id/okButtonComment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ok_button_basic_lab"
+                    android:textSize="15sp"
+                    android:layout_below="@id/DoctorsCommentEditText"
+                    android:layout_alignParentRight="true"
+                    android:textColor="#ffffff"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:onClick="setDoctorsComment"
+                    android:background="#00c853">
+
+                </Button>
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="3dp"
+                android:layout_below="@+id/DoctorsCommentRelativeLayout"
+                android:id="@+id/ReminderRefill">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Remind my next BloodWork"
+                    android:elevation="10dp"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    android:layout_margin="5dp"
+                    android:textColor="#ffffff"
+                    android:background="@drawable/rounded_corner"
+                    android:padding="2dp"
+                    app:fontFamily="sans-serif-condensed"
+                    >
+                </TextView>
 
 
-        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/radioButtonRefill">
-            <RadioButton android:id="@+id/radio_pirates1"
+                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:id="@+id/radioButtonRefill"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp">
+                    <RadioButton android:id="@+id/radio_pirates1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="No"
+                        android:onClick="onRadioButtonClicked"
+                        android:checked="true"/>
+                    <RadioButton android:id="@+id/radio_ninjas1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Yes"
+                        android:onClick="onRadioButtonClicked"/>
+                </RadioGroup>
+
+            </LinearLayout>
+            <DatePicker
+                android:id="@+id/simpleDatePicker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="No"
-                android:onClick="onRadioButtonClicked"
-                android:checked="true"/>
-            <RadioButton android:id="@+id/radio_ninjas1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Yes"
-                android:onClick="onRadioButtonClicked"/>
-        </RadioGroup>
-
-    </LinearLayout>
-    <DatePicker
-        android:id="@+id/simpleDatePicker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:datePickerMode="spinner"
-        android:layout_centerInParent="true"
-        android:background="@drawable/rounded_corner_timepicker"
-        android:elevation="10dp"
-        android:visibility="invisible"
-        android:calendarViewShown="false"
-        android:layout_below="@id/ReminderRefill"/>
+                android:datePickerMode="spinner"
+                android:layout_centerInParent="true"
+                android:background="@drawable/rounded_corner_datepicker"
+                android:elevation="10dp"
+                android:visibility="invisible"
+                android:calendarViewShown="false"
+                android:layout_below="@id/ReminderRefill"/>
+        </RelativeLayout>
+    </ScrollView>
 
 
     <RelativeLayout
