--- a/app/src/main/res/layout/activity_info_page.xml
+++ b/app/src/main/res/layout/activity_info_page.xml
@@ -33,97 +33,21 @@
 
     <ImageView
         android:id="@+id/appImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@id/textView3"
         android:layout_centerHorizontal="true"
         android:background="@drawable/splash_screen_app_icon"
-       >
-
+        >
     </ImageView>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/feedback"
-        android:id="@+id/upcominf_features"
-        android:layout_marginBottom="10dp"
-        android:paddingLeft="10dp"
-        android:paddingStart="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/UpcomingFeatures"
-            android:textColor="@color/labText"
-            android:textSize="20sp"
-            android:id="@+id/workingId">
-        </TextView>
-
-
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:id="@+id/featuresList"
-    android:visibility="visible"
-    android:layout_below="@id/workingId">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Save your BloodWork as PDF"
-            android:padding="1dp">
-
-        </TextView>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="1dp"
-            android:text="Reminder to refill your pills">
-
-        </TextView>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="1dp"
-        android:text="Medication Reminder by day">
-
-    </TextView>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="1dp"
-            android:text="Doctor's comment section">
-
-        </TextView>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="1dp"
-            android:text="Snooze in Medication Notification">
-
-        </TextView>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="1dp"
-            android:text="UI enhancements. And yes, Dark theme.">
-
-        </TextView>
-
-</LinearLayout>
-    </RelativeLayout>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_below="@+id/appImage"
-        android:padding="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="15dp"
+        android:layout_above="@+id/feedback"
+        android:layout_margin="10dp"
         android:id="@+id/switch_layout">
 
 
@@ -133,38 +57,30 @@
             android:text="@string/forBloodWork"
             android:textSize="22sp"
             android:textColor="#000000"/>
+
+        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/radioButtonRefill">
+            <RadioButton android:id="@+id/radio_pirates1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/TraditionalUnit"
+                android:checked="true"/>
+            <RadioButton android:id="@+id/radio_ninjas1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/StandardUnit"
+                />
+        </RadioGroup>
         <TextView
             android:id="@+id/SIunitissettext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="0dp"
+            android:paddingLeft="20dp"
             android:text="@string/unitsSIT">
         </TextView>
-        <Switch
-            android:id="@+id/simpleSwitch"
-            android:layout_width="200dp"
-            android:layout_marginTop="3dp"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:switchPadding="5dp"
-            android:text="@string/TraditionalUnit"
-            android:textColor="@color/labText"
-            android:textSize="20sp"
-            android:textStyle="normal"
-            android:theme="@style/SCBSwitch" />
-
-        <Switch
-            android:id="@+id/simpleSwitchStandard"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:switchPadding="5dp"
-            android:layout_marginTop="3dp"
-            android:text="@string/StandardUnit"
-            android:textColor="@color/labText"
-            android:textSize="20sp"
-            android:textStyle="normal"
-            android:theme="@style/SCBSwitch" />
 
     </LinearLayout>
 
@@ -190,27 +106,25 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            >
 
-            <TextView
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                android:layout_margin="5dp"
-                android:drawableTop="@drawable/email_icon"
+                android:layout_marginLeft="15dp"
+                android:src="@drawable/email_icon"
                 android:onClick="email">
+            </ImageView>
 
-            </TextView>
-
-            <TextView
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:layout_margin="5dp"
-                android:drawableTop="@drawable/twitter_icon"
+                android:src="@drawable/twitter_icon"
                 android:onClick="twitter">
 
-            </TextView>
+            </ImageView>
         </LinearLayout>
     </LinearLayout>
 
