--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,8 +37,8 @@
             android:textSize="32sp"
             android:textStyle="bold"
             android:id="@+id/BloodWorkText">
-
         </TextView>
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -72,8 +72,8 @@
             android:textSize="32sp"
             android:textStyle="bold"
             android:id="@+id/MedicationText">
-
         </TextView>
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -81,39 +81,36 @@
             android:layout_toEndOf="@+id/MedicationText"
             android:src="@drawable/rightblue"
             android:layout_centerVertical="true">
-
         </ImageView>
     </RelativeLayout>
 
-
-
-
     <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@id/buttons"
+        android:padding="5dp"
+        >
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@id/buttons"
-            android:padding="5dp"
-            >
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:id="@+id/fab_lab"
-                android:layout_alignParentEnd="true"
-                android:backgroundTint="#e53935"
-                android:src="@drawable/syringeicon"/>
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:id="@+id/fab_lab"
+            android:layout_alignParentEnd="true"
+            android:backgroundTint="#ff8a65"
+            android:src="@drawable/syringeicon"/>
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/info"
-                android:layout_alignParentBottom="true"
-                android:backgroundTint="#bdbdbd"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:onClick="gotoinfopage"
-                android:src="@drawable/info_icon"/>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/info"
+            android:layout_alignParentBottom="true"
+            android:backgroundTint="#bdbdbd"
+            android:background="#bdbdbd"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:onClick="gotoinfopage"
+            android:src="@drawable/info_icon"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
@@ -122,6 +119,7 @@
             android:layout_centerHorizontal="true"
             android:id="@+id/fab_tab"
             android:backgroundTint="#1976d2"
+            android:visibility="gone"
             android:src="@drawable/alarm96"/>
-        </RelativeLayout>
+    </RelativeLayout>
 </RelativeLayout>
