--- a/app/src/main/res/layout/bloodtracking2.xml
+++ b/app/src/main/res/layout/bloodtracking2.xml
@@ -10,13 +10,13 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="180dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginBottom="5dp"
         android:textColor="@color/labTextHeading"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="normal"
         android:theme="@style/MyEditText"
         app:fontFamily="sans-serif-smallcaps" />
@@ -28,15 +28,26 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/textView"
         android:layout_toEndOf="@+id/textView"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginBottom="5dp"
         android:textColor="#0A0909"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:fontFamily="sans-serif-smallcaps"
         tools:text="yy" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/upDownButton"
+        android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
+        android:padding="3dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true">
+
+    </ImageView>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
